Changed key config file name for new adds

--- a/source/evm/keymap.cfg
+++ b/source/evm/keymap.cfg
@@ -26,9 +26,10 @@ key12=1:TRANSP_DOWN:yellow
 key13=0:HALF BAR:purple
 key14=0:FILL & DRUM IN:green
 key15=1:TRANSP_UP:yellow
-key16=2:PLUGGED:orange
+key16=0:Arr.Off:red
 key17=2:UNPLUGGED:orange
-key18=1:OCTAVE_UP:teal
+key18=1:OCTAVE_DOWN:teal
 key19=0:Arr.Off:red
-key1A=0:Arr.Off:red
-key1B=1:OCTAVE_DOWN:teal
+key1A=2:PLUGGED:orange
+key1B=1:OCTAVE_UP:teal
+# End
