Update keys config file removing error in mappings

--- a/source/evmplus/keymap.cfg
+++ b/source/evmplus/keymap.cfg
@@ -1,10 +1,10 @@
-# Please ensure an exact copy of the Midi value text. No characters added or deleted and no redundant spaces!
-# Notice the keys order: Row/columns start Bottom right and ends at Top left key with the USB point left
+# Please ensure an exact copy of the Midi value text from the Pedal or Tab message list. No characters added or deleted and no redundant spaces!
+# Notice the keys order: Row/columns start Bottom left and ends at Top RIght key with the USB pointing left
 # Strictly follow the file formatting below to avoid errors.
 # All keys will be flagged in red if a formatting error is found in this file. The LCD display will show the failed key mappping.
 # Make a copy of the original keyconfig.txt file before modifying this file in case you need to revert back.
-# Color code keys with one of the following: red, green, blue, yellow, purple, orange, or white
-# Select a supported SysEx message from the Pedal or Tabs list linked to below only.
+# Color code keys with one of the following: red, green, blue, yellow, purple, orange, teal or white
+# Select a supported SysEx message from the Pedal (0), Tabs (1) or Macro (2) lists.
 # Link to supported Pedal and Tab Midi Mappings: https://shop.ketron.it/images/ketron/manualiPdf/EventX/EVENT%20SYSEX-NRPN.pdf
 # Layer Base
 key00=1:VARIATION:blue
@@ -21,14 +21,15 @@ key0A=0:Arr.D:blue
 key0B=0:To End:red
 # Layer: Shift
 key10=1:VARIATION:blue
-key11=2:VOICEMUTE:red
+key11=0:Low. Mute:red
 key12=1:TRANSP_DOWN:yellow
 key13=0:HALF BAR:purple
 key14=0:FILL & DRUM IN:green
 key15=1:TRANSP_UP:yellow
-key16=2:PLUGGED:orange
+key16=0:Arr.Off:red
 key17=2:UNPLUGGED:orange
-key18=1:OCTAVE_UP:teal
-key19=0:Arr.Off:red
-key1A=0:Arr.Off:red
-key1B=1:OCTAVE_DOWN:teal
+key18=1:OCTAVE_DOWN:teal
+key19=0:Start/Stop:red
+key1A=2:PLUGGED:orange
+key1B=1:OCTAVE_UP:teal
+# End
