Changed quad encoder 3 to Vol 0 for uppers only

--- a/source/evmplus/keymap.cfg
+++ b/source/evmplus/keymap.cfg
@@ -21,15 +21,15 @@ key0A=0:Arr.D:blue
 key0B=0:To End:red
 # Layer: Shift
 key10=1:VARIATION:blue
-key11=0:Low. Mute:red
+key11=0:Arr.Off:red
 key12=1:TRANSP_DOWN:yellow
-key13=0:HALF BAR:purple
-key14=0:FILL & DRUM IN:green
+key13=1:DIAL_DOWN:green
+key14=2:PLUGGED:orange
 key15=1:TRANSP_UP:yellow
-key16=0:Arr.Off:red
+key16=1:DIAL_UP:green
 key17=2:UNPLUGGED:orange
 key18=1:OCTAVE_DOWN:teal
 key19=0:Start/Stop:red
-key1A=2:PLUGGED:orange
+key1A=0:HALF BAR:purple
 key1B=1:OCTAVE_UP:teal
 # End
