--- a/source/evmplus/keymap.cfg
+++ b/source/evmplus/keymap.cfg
@@ -1,12 +1,20 @@
-# Please ensure an exact copy of the Midi value text from the Pedal or Tab message list. No characters added or deleted and no redundant spaces!
-# Notice the keys order: Row/columns start Bottom left and ends at Top RIght key with the USB pointing left
+# EVM Arranger Controller Configuraton FIle
+#
+# Please ensure an exact copy of the Midi value text from the Pedal or Tab message list. No characters is to be added or deleted and no redundant spaces!
+# Select a supported SysEx message from the Pedal (0), Tabs (1) or Macro (2) lists for assignment to keys.
+# Link to supported Pedal and Tab Midi Mappings: Source code or https://shop.ketron.it/images/ketron/manualiPdf/EventX/EVENT%20SYSEX-NRPN.pdf
 # Strictly follow the file formatting below to avoid errors.
-# All keys will be flagged in red if a formatting error is found in this file. The LCD display will show the failed key mappping.
 # Make a copy of the original keyconfig.txt file before modifying this file in case you need to revert back.
-# Color code keys with one of the following: red, green, blue, yellow, purple, orange, teal or white
-# Select a supported SysEx message from the Pedal (0), Tabs (1) or Macro (2) lists.
-# Link to supported Pedal and Tab Midi Mappings: https://shop.ketron.it/images/ketron/manualiPdf/EventX/EVENT%20SYSEX-NRPN.pdf
-# Layer Base
+# All keys will be flagged in red if a formatting error is encountered in this file. The LCD display will show the failed key mappping.
+# Color code keys with one of the following colors: red, green, blue, yellow, purple, orange, teal or white.
+#
+# Layer Key Layout (for shift layer use 1x instead of 0x). Row 0 is bottom left if USB port is facing left
+# row 2: key02 key05 key08 key0B
+# row 1: key01 key04 key07 key0A
+# row 0: key00 key03 key06 key09
+# Note: Please to note that key00 or key09 have special logic attached to them and it may be better to leave them configured as is 
+#
+# Layer: Base
 key00=1:VARIATION:blue
 key01=0:Arr.A:blue
 key02=0:Intro/End1:green
@@ -21,15 +29,15 @@ key0A=0:Arr.D:blue
 key0B=0:To End:red
 # Layer: Shift
 key10=1:VARIATION:blue
-key11=0:Arr.Off:red
+key11=0:HALF BAR:green
 key12=1:TRANSP_DOWN:yellow
-key13=1:DIAL_DOWN:green
+key13=1:DIAL_DOWN:purple
 key14=2:PLUGGED:orange
 key15=1:TRANSP_UP:yellow
-key16=1:DIAL_UP:green
+key16=1:DIAL_UP:purple
 key17=2:UNPLUGGED:orange
 key18=1:OCTAVE_DOWN:teal
 key19=0:Start/Stop:red
-key1A=0:HALF BAR:purple
+key1A=0:Arr.Off:red
 key1B=1:OCTAVE_UP:teal
 # End
