--- a/source/evmplus/keymap.cfg
+++ b/source/evmplus/keymap.cfg
@@ -38,6 +38,6 @@ key16=1:DIAL_UP:purple
 key17=2:UNPLUGGED:orange
 key18=1:OCTAVE_DOWN:teal
 key19=0:Start/Stop:red
-key1A=0:Arr.Off:red
+key1A=0:Low. Mute:red
 key1B=1:OCTAVE_UP:teal
 # End
