Updated keymap.cfg adding macro definitions

--- a/source/evmplus/keymap.cfg
+++ b/source/evmplus/keymap.cfg
@@ -1,4 +1,4 @@
-# EVM Arranger Controller Configuraton FIle
+# EVM Arranger Controller Configuration File
 #
 # Please ensure an exact copy of the Midi value text from the Pedal or Tab message list. No characters is to be added or deleted and no redundant spaces!
 # Select a supported SysEx message from the Pedal (0), Tabs (1) or Macro (2) lists for assignment to keys.
@@ -15,7 +15,7 @@
 # Note: Please to note that key00 or key09 have special logic attached to them and it may be better to leave them configured as is 
 #
 # Layer: Base
-key00=1:VARIATION:blue
+key00=1:VARIATION:teal
 key01=0:Arr.A:blue
 key02=0:Intro/End1:green
 key03=1:FILL:green
@@ -40,4 +40,15 @@ key18=1:OCTAVE_DOWN:teal
 key19=0:Start/Stop:red
 key1A=0:Low. Mute:red
 key1B=1:OCTAVE_UP:teal
+# Macros
+mac00=PLUGGED[0:Bass & Drum]:orange
+mac01=UNPLUGGED[0:Drum Mute,0:Bass Mute]:orange
+mac02=VOICESMUTE[0:Bass Mute,0:Low. Mute,0:Lead Mute]:purple
+mac03=UNDEFINED[]:blue
+mac04=UNDEFINED[]:blue
+mac05=UNDEFINED[]:blue
+mac06=UNDEFINED[]:blue
+mac07=UNDEFINED[]:blue
+mac08=UNDEFINED[]:blue
+mac09=UNDEFINED[]:blue
 # End
