Modified Macro dictionary to load from disk after modification by Config Editor

--- a/source/evm/keymap.cfg
+++ b/source/evm/keymap.cfg
@@ -26,7 +26,7 @@ key07=0:Arr.C:blue
 key08=0:Intro/End3:green
 key09=0:Start/Stop:red
 key0A=0:Arr.D:blue
-key0B=0:To End:red
+key0B=2:VOLUMEUP:purple
 # Layer: Shift
 key10=1:VARIATION:blue
 key11=0:HALF BAR:green
@@ -38,6 +38,17 @@ key16=1:DIAL_UP:purple
 key17=2:UNPLUGGED:orange
 key18=1:OCTAVE_DOWN:teal
 key19=0:Start/Stop:red
-key1A=0:Low. Mute:red
+key1A=0:Arr.Off:red
 key1B=1:OCTAVE_UP:teal
+# Macro Keys: 0 through 9
+mac00=PLUGGED:[1:FILL,0:Arr.A]
+mac01=UNPLUGGED:[1:VARIATION]
+mac02=OCTAVEDOWN:[1:VARIATION]
+mac03=OCTAVEUP:[1:VARIATION]
+mac04=TRANSPDOWN:[1:VARIATION]
+mac05=TRANSPUP:[1:VARIATION]
+mac06=DIALDOWN:[1:VARIATION]
+mac07=DIALUP:[1:VARIATION]
+mac08=VOLUMEUP:[1:VARIATION]
+mac09=VOLUMEDOWN:[1:VARIATION]
 # End
