--- a/source/evmplus/keymap.cfg
+++ b/source/evmplus/keymap.cfg
@@ -15,7 +15,7 @@
 # Note: Please to note that key00 or key09 have special logic attached to them and it may be better to leave them configured as is 
 #
 # Layer: Base
-key00=1:VARIATION:teal
+key00=1:VARIATION:blue
 key01=0:Arr.A:blue
 key02=0:Intro/End1:green
 key03=1:FILL:green
@@ -40,15 +40,21 @@ key18=1:OCTAVE_DOWN:teal
 key19=0:Start/Stop:red
 key1A=0:Low. Mute:red
 key1B=1:OCTAVE_UP:teal
-# Macros
-mac00=PLUGGED[0:Bass & Drum]:orange
-mac01=UNPLUGGED[0:Drum Mute,0:Bass Mute]:orange
-mac02=VOICESMUTE[0:Bass Mute,0:Low. Mute,0:Lead Mute]:purple
-mac03=UNDEFINED[]:blue
-mac04=UNDEFINED[]:blue
-mac05=UNDEFINED[]:blue
-mac06=UNDEFINED[]:blue
-mac07=UNDEFINED[]:blue
-mac08=UNDEFINED[]:blue
-mac09=UNDEFINED[]:blue
+# Macro Keys: 0 through 9
+mac00=UNPLUGGED:[0:FILL & DRUM IN]:teal
+mac01=PLUGGED:[0:Drum Mute]:teal
+mac02:FArr.A:[1:FILL,0:Arr.A]:blue
+mac03:FArr.B:[1:FILL,0:Arr.B]:blue
+mac04:FArr.C:[1:FILL,0:Arr.C]:blue
+mac05:FArr.D:[1:FILL,0:Arr.D]:blue
+mac06:SStop:[0:Start/Stop]:red
+mac07:SStop:[0:Start/Stop]:red
+mac08:SStop:[0:Start/Stop]:red
+mac09:SStop:[0:Start/Stop]:red
 # End
+
+
+
+
+
+
