Modified Macro dictionary to load from disk after modification by Config Editor

--- a/source/evmplus/keymap.cfg
+++ b/source/evmplus/keymap.cfg
@@ -1,4 +1,4 @@
-# EVM Arranger Controller Configuration File
+# EVM Arranger Controller Configuraton FIle
 #
 # Please ensure an exact copy of the Midi value text from the Pedal or Tab message list. No characters is to be added or deleted and no redundant spaces!
 # Select a supported SysEx message from the Pedal (0), Tabs (1) or Macro (2) lists for assignment to keys.
@@ -26,7 +26,7 @@ key07=0:Arr.C:blue
 key08=0:Intro/End3:green
 key09=0:Start/Stop:red
 key0A=0:Arr.D:blue
-key0B=0:To End:red
+key0B=2:VOLUMEUP:purple
 # Layer: Shift
 key10=1:VARIATION:blue
 key11=0:HALF BAR:green
@@ -38,23 +38,17 @@ key16=1:DIAL_UP:purple
 key17=2:UNPLUGGED:orange
 key18=1:OCTAVE_DOWN:teal
 key19=0:Start/Stop:red
-key1A=0:Low. Mute:red
+key1A=0:Arr.Off:red
 key1B=1:OCTAVE_UP:teal
 # Macro Keys: 0 through 9
-mac00=UNPLUGGED:[0:FILL & DRUM IN]:teal
-mac01=PLUGGED:[0:Drum Mute]:teal
-mac02:FArr.A:[1:FILL,0:Arr.A]:blue
-mac03:FArr.B:[1:FILL,0:Arr.B]:blue
-mac04:FArr.C:[1:FILL,0:Arr.C]:blue
-mac05:FArr.D:[1:FILL,0:Arr.D]:blue
-mac06:SStop:[0:Start/Stop]:red
-mac07:SStop:[0:Start/Stop]:red
-mac08:SStop:[0:Start/Stop]:red
-mac09:SStop:[0:Start/Stop]:red
+mac00=PLUGGED:[1:FILL,0:Arr.A]
+mac01=UNPLUGGED:[1:VARIATION]
+mac02=OCTAVEDOWN:[1:VARIATION]
+mac03=OCTAVEUP:[1:VARIATION]
+mac04=TRANSPDOWN:[1:VARIATION]
+mac05=TRANSPUP:[1:VARIATION]
+mac06=DIALDOWN:[1:VARIATION]
+mac07=DIALUP:[1:VARIATION]
+mac08=VOLUMEUP:[1:VARIATION]
+mac09=VOLUMEDOWN:[1:VARIATION]
 # End
-
-
-
-
-
-
