--- a/source/evm/keymap.cfg
+++ b/source/evm/keymap.cfg
@@ -16,17 +16,17 @@
 #
 # Layer: Base
 key00=1:VARIATION:blue
-key01=0:Arr.A:blue
+key01=2:FArr.A:blue
 key02=0:Intro/End1:green
 key03=1:FILL:green
-key04=0:Arr.B:blue
+key04=2:FArr.B:blue
 key05=0:Intro/End2:green
 key06=1:BREAK:orange
-key07=0:Arr.C:blue
+key07=2:FArr.C:blue
 key08=0:Intro/End3:green
 key09=0:Start/Stop:red
-key0A=0:Arr.D:blue
-key0B=2:VOLUMEUP:purple
+key0A=2:FArr.D:blue
+key0B=0:To End:red
 # Layer: Shift
 key10=1:VARIATION:blue
 key11=0:HALF BAR:green
@@ -41,14 +41,24 @@ key19=0:Start/Stop:red
 key1A=0:Arr.Off:red
 key1B=1:OCTAVE_UP:teal
 # Macro Keys: 0 through 9
-mac00=PLUGGED:[1:FILL,0:Arr.A]
-mac01=UNPLUGGED:[1:VARIATION]
-mac02=OCTAVEDOWN:[1:VARIATION]
-mac03=OCTAVEUP:[1:VARIATION]
-mac04=TRANSPDOWN:[1:VARIATION]
-mac05=TRANSPUP:[1:VARIATION]
-mac06=DIALDOWN:[1:VARIATION]
-mac07=DIALUP:[1:VARIATION]
-mac08=VOLUMEUP:[1:VARIATION]
-mac09=VOLUMEDOWN:[1:VARIATION]
+mac00=PLUGGED:[0:Bass & Drum]
+mac01=UNPLUGGED:[0:Drum Mute,0:Bass Mute]
+mac02=FArr.A:[0:Arr.A]
+mac03=FArr.B:[1:FILL,0:Arr.B]
+mac04=FArr.C:[1:FILL,0:Arr.C]
+mac05=FArr.D:[1:FILL,0:Arr.D]
+mac06=SSTOP1:[0:Start/Stop]
+mac07=SSTOP2:[0:Start/Stop]
+mac08=SSTOP3:[0:Start/Stop]
+mac09=SSTOP4:[0:Start/Stop]
 # End
+
+
+
+
+
+
+
+
+
+
