--- a/source/evm/keymap.cfg
+++ b/source/evm/keymap.cfg
@@ -38,7 +38,7 @@ key16=1:DIAL_UP:purple
 key17=2:UNPLUGGED:orange
 key18=1:OCTAVE_DOWN:teal
 key19=0:Start/Stop:red
-key1A=0:Arr.Off:red
+key1A=2:RHYTHM:green
 key1B=1:OCTAVE_UP:teal
 # Macro Keys: 0 through 9
 mac00=PLUGGED:[0:Bass & Drum]
@@ -47,11 +47,13 @@ mac02=FArr.A:[0:Arr.A]
 mac03=FArr.B:[1:FILL,0:Arr.B]
 mac04=FArr.C:[1:FILL,0:Arr.C]
 mac05=FArr.D:[1:FILL,0:Arr.D]
-mac06=SSTOP1:[0:Start/Stop]
+mac06=RHYTHM:[0:Bass & Drum,0:Bass Mute]
 mac07=SSTOP2:[0:Start/Stop]
 mac08=SSTOP3:[0:Start/Stop]
 mac09=SSTOP4:[0:Start/Stop]
 # End
+
+
 
 
 
