--- a/source/evm/keymap.cfg
+++ b/source/evm/keymap.cfg
@@ -16,16 +16,16 @@
 #
 # Layer: Base
 key00=1:VARIATION:blue
-key01=2:FArr.A:blue
+key01=0:Arr.A:blue
 key02=0:Intro/End1:green
 key03=1:FILL:green
-key04=2:FArr.B:blue
+key04=0:Arr.B:blue
 key05=0:Intro/End2:green
 key06=1:BREAK:orange
-key07=2:FArr.C:blue
+key07=0:Arr.C:blue
 key08=0:Intro/End3:green
 key09=0:Start/Stop:red
-key0A=2:FArr.D:blue
+key0A=0:Arr.D:blue
 key0B=0:To End:red
 # Layer: Shift
 key10=1:VARIATION:blue
@@ -51,6 +51,10 @@ mac06=RHYTHM:[0:Bass & Drum,0:Bass Mute]
 mac07=SSTOP2:[0:Start/Stop]
 mac08=SSTOP3:[0:Start/Stop]
 mac09=SSTOP4:[0:Start/Stop]
+# Variables
+var00=EncQuad:True
+var01=EncStep:4
+var02=EncFwd:True
 # End
 
 
