Updated the readme

--- a/source/evm/keymap.cfg
+++ b/source/evm/keymap.cfg
@@ -52,7 +52,7 @@ mac07=SSTOP2:[0:Start/Stop]
 mac08=SSTOP3:[0:Start/Stop]
 mac09=SSTOP4:[0:Start/Stop]
 # Variables
-var00=EncQuad:True
+var00=EncQuad:False
 var01=EncStep:4
 var02=EncFwd:True
 # End
