--- a/source/evmplus/keymap.cfg
+++ b/source/evmplus/keymap.cfg
@@ -51,6 +51,31 @@ mac06=RHYTHM:[0:Bass & Drum,0:Bass Mute]
 mac07=SSTOP2:[0:Start/Stop]
 mac08=SSTOP3:[0:Start/Stop]
 mac09=SSTOP4:[0:Start/Stop]
+# Quad Encoder Macros
+mac50=Style.Voices:[3:STYLE_CC,3:DRUM_CC,3:REALCHORD_CC,3:CHORD_CC]
+mac51=All.Voices:[3:BASS_CC,3:LOWERS_CC,3:VOICE1_CC,3:VOICE2_CC,3:DRAWBARS_CC]
+mac52=Manual.Voices:[3:LOWERS_CC,3:VOICE1_CC,3:VOICE2_CC,3:DRAWBARS_CC]
+mac53=Upper.Voices:[3:VOICE1_CC,3:VOICE2_CC,3:DRAWBARS_CC]
+mac54=Lower.Voices:[3:LOWERS_CC]
+mac55=Bass.Voices:[3:BASS_CC]
+# Layer: Base Quad Encoder configs 
+enc00=3:LOWERS_CC
+swi00=2:Lower.Voices
+ecn01=3:VOICE1_CC
+swi01=2:Upper.Voices
+enc02=3:VOICE2_CC
+swi02=2:All.Voices
+enc03=3:DRAWBARS_CC
+swi03=2:All.Voices
+# Layer: Shift Quad Encoder configs 
+enc10=3:STYLE_CC
+swi10=2:Style.Voices
+enc11=3:DRUM_CC
+swi11=2:Style.Voices
+enc12=3:CHORD_CC
+swi12=2:Bass.Voices
+enc13=3:REALCHORD_CC
+swi13=2:Bass.Voices
 # Variables
 var00=EncQuad:True
 var01=EncStep:4
