Added graded adjustment of quad volumes

--- a/source/evmplus/keymap.cfg
+++ b/source/evmplus/keymap.cfg
@@ -79,7 +79,8 @@ swi13=2:Bass.Voices
 # Variables
 var00=EncQuad:True
 var01=EncStep:4
-var02=EncFwd:False
+var02=EncFwd:True
+var03=EncGrad:True
 # End
 
 
