--- a/source/evm/keymap-leigh.cfg
+++ b/source/evm/keymap-leigh.cfg
@@ -15,17 +15,17 @@
 # Note: Please to note that key00 or key09 have special logic attached to them and it may be better to leave them configured as is 
 #
 # Layer: Base
+key01=0:Arr.A:white
 key00=1:VARIATION:blue
-key01=0:Arr.A:blue
 key02=0:Intro/End1:green
+key04=0:Arr.B:white
 key03=1:FILL:green
-key04=0:Arr.B:blue
 key05=0:Intro/End2:green
+key07=0:Arr.C:white
 key06=1:BREAK:orange
-key07=0:Arr.C:blue
 key08=0:Intro/End3:green
+key0A=0:Arr.D:white
 key09=0:Start/Stop:red
-key0A=0:Arr.D:blue
 key0B=0:To End:red
 # Layer: Shift
 key10=1:VARIATION:blue
@@ -76,16 +76,12 @@ enc12=3:CHORD_CC
 swi12=2:Bass.Voices
 enc13=3:REALCHORD_CC
 swi13=2:Bass.Voices
-# Variables: True or False. Timers in milliseconds
+# Variables
 var00=EncQuad:True
 var01=EncStep:4
 var02=EncFwd:True
 var03=EncGrad:True
 var04=EncVol:80
-var05=KeyVar:0
-var06=ModShift:True
-var07=TimVar:300
-var08=TimTempo:30000
 # End
 
 
