--- a/source/evm/keymap-leigh.cfg
+++ b/source/evm/keymap-leigh.cfg
@@ -15,16 +15,16 @@
 # Note: Please to note that key00 or key09 have special logic attached to them and it may be better to leave them configured as is 
 #
 # Layer: Base
-key01=0:Arr.A:white
+key01=0:Arr.A:offwhite
 key00=1:VARIATION:blue
 key02=0:Intro/End1:green
-key04=0:Arr.B:white
+key04=0:Arr.B:offwhite
 key03=1:FILL:green
 key05=0:Intro/End2:green
-key07=0:Arr.C:white
+key07=0:Arr.C:offwhite
 key06=1:BREAK:orange
 key08=0:Intro/End3:green
-key0A=0:Arr.D:white
+key0A=0:Arr.D:offwhite
 key09=0:Start/Stop:red
 key0B=0:To End:red
 # Layer: Shift
@@ -76,12 +76,16 @@ enc12=3:CHORD_CC
 swi12=2:Bass.Voices
 enc13=3:REALCHORD_CC
 swi13=2:Bass.Voices
-# Variables
-var00=EncQuad:True
+# Variables: True or False. Timers in milliseconds
+var09=MIDChan:9
+var05=KeyVar:1
+var00=EncQuad:False
 var01=EncStep:4
 var02=EncFwd:True
 var03=EncGrad:True
 var04=EncVol:80
+var07=TimVar:300
+var08=TimTempo:30000
 # End
 
 
