--- a/source/evmplus/keymap.cfg
+++ b/source/evmplus/keymap.cfg
@@ -77,13 +77,13 @@ swi12=2:Bass.Voices
 enc13=3:REALCHORD_CC
 swi13=2:Bass.Voices
 # Variables: True or False. Timers in milliseconds
+var09=MIDChan:16
+var05=KeyVar:0
 var00=EncQuad:True
 var01=EncStep:4
 var02=EncFwd:True
 var03=EncGrad:True
 var04=EncVol:80
-var05=KeyVar:0
-var06=ModShift:True
 var07=TimVar:300
 var08=TimTempo:30000
 # End
