Unified Added config variables in keymap.cfg across HS13 and HS13+

--- a/source/evm/keymap-leigh.cfg
+++ b/source/evm/keymap-leigh.cfg
@@ -77,15 +77,16 @@ swi12=2:Bass.Voices
 enc13=3:REALCHORD_CC
 swi13=2:Bass.Voices
 # Variables: True or False. Timers in milliseconds
-var09=MIDChan:9
-var05=KeyVar:1
-var00=EncQuad:False
-var01=EncStep:4
-var02=EncFwd:True
-var03=EncGrad:True
-var04=EncVol:80
-var07=TimVar:300
-var08=TimTempo:30000
+var00=MIDChan:16
+var01=ModShift:False
+var02=KeyVar:1
+var03=EncQuad:True
+var04=EncStep:4
+var05=EncFwd:True
+var05=EncGrad:True
+var07=EncVol:80
+var08=TimVar:300
+var09=TimTempo:30000
 # End
 
 
