--- a/source/evm/keymap.cfg
+++ b/source/evm/keymap.cfg
@@ -51,10 +51,42 @@ mac06=RHYTHM:[0:Bass & Drum,0:Bass Mute]
 mac07=SSTOP2:[0:Start/Stop]
 mac08=SSTOP3:[0:Start/Stop]
 mac09=SSTOP4:[0:Start/Stop]
-# Variables
-var00=EncQuad:False
-var01=EncStep:4
-var02=EncFwd:True
+# Quad Encoder Macros
+mac50=Style.Voices:[3:STYLE_CC,3:DRUM_CC,3:REALCHORD_CC,3:CHORD_CC]
+mac51=All.Voices:[3:BASS_CC,3:LOWERS_CC,3:VOICE1_CC,3:VOICE2_CC,3:DRAWBARS_CC]
+mac52=Manual.Voices:[3:LOWERS_CC,3:VOICE1_CC,3:VOICE2_CC,3:DRAWBARS_CC]
+mac53=Upper.Voices:[3:VOICE1_CC,3:VOICE2_CC,3:DRAWBARS_CC]
+mac54=Lower.Voices:[3:LOWERS_CC]
+mac55=Bass.Voices:[3:BASS_CC]
+# Layer: Base Quad Encoder configs 
+enc00=3:LOWERS_CC
+swi00=2:Lower.Voices
+ecn01=3:VOICE1_CC
+swi01=2:Upper.Voices
+enc02=3:VOICE2_CC
+swi02=2:All.Voices
+enc03=3:DRAWBARS_CC
+swi03=2:All.Voices
+# Layer: Shift Quad Encoder configs 
+enc10=3:STYLE_CC
+swi10=2:Style.Voices
+enc11=3:DRUM_CC
+swi11=2:Style.Voices
+enc12=3:CHORD_CC
+swi12=2:Bass.Voices
+enc13=3:REALCHORD_CC
+swi13=2:Bass.Voices
+# Variables: True or False. Timers in milliseconds
+var00=MIDChan:16
+var01=ModShift:True
+var02=KeyVar:0
+var03=EncQuad:False
+var04=EncStep:4
+var05=EncFwd:True
+var05=EncGrad:True
+var07=EncVol:80
+var08=TimVar:300
+var09=TimTempo:30000
 # End
 
 
